      long namespace prefixes on functions.
    - Remove $main::chroot_apt_options.
    - Move $main::debug to Sbuild::Conf.
    - Import Sbuild::Conf into package "conf".  This allows the package
      name used by upstream to be used for backward compatibility.
    - Use $conf::HOME instead of $main::HOME.
    - Move $main::username to Sbuild::Conf.
  * Sbuild.pm: Add basename function.
  * Sbuild/Chroot.pm:
    - New perl module for chroot operations.  It contains the functions
      begin_session, end_session, log_command, get_command_internal,
      get_command, run_command, exec_command, get_apt_command_internal,
      get_apt_command and run_apt_command.
    - Don't export init and log_command.
    - Don't hardcode a list of chroots; use a glob to search for chroot-*
      instead.  This allows any distribution name to be specified with -d.
    - Add an "APT Options" attribute to the chroot hash, to replace
      $main::chroot_apt_options.
    - Use STDERR instead of PLOG (which may not be available).
    - Replace $main::debug with $Sbuild::Conf::debug.
    - Replace $main::username with $Sbuild::Conf::username.
    - begin_session takes the distribution as its first argument, rather
      than using $main::distribution.
  * Sbuild/Conf.pm:
    - New perl module for configuration variables.  It reads the system
      and user configuration.
    - Add $debug.
    - Add $username.
  * Sbuild/Log.pm: New perl module for logging.  It contains the functions
    open_log, close_log, open_pkg_log, close_pkg_log, add_time_entry,
    add_space_entry, send_mail and log_symlink.
  * bin/checkchroot:
    - Quote all variables.
    - Sort ref-chroot file before diffing (Closes: 360058).
  * avg-pkg-build-time.1.in, sbuild.1.in, sbuild-setup.7.in,
    update-sourcedeps.1.in, Sbuild/Log.pm.in: Rename and embed version and
    date tags for substitution.
  * COPYING: New file (GPL licence text).
  * debian/control: Update uploaders.
  * debian/copyright: